--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "~3.4.7",
     "request": "~2.30.0",
-    "async": "*"
+    "async": "*",
+    "underscore": "~1.5.2"
   }
 }
