--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "~2.30.0",
     "async": "*",
     "underscore": "~1.5.2",
-    "jade": "~1.0.2"
+    "jade": "~1.0.2",
+    "mongodb": "~1.3.23"
   }
 }
